<resources>
    <string name="app_name">悦啦</string>
    <string name="equipment">设备</string>
    <string name="health">健康</string>
    <string name="community">社区</string>
    <string name="personal">我</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_or_register">登录/注册</string>
    <string name="set_login_password">设置密码</string>
    <string name="next_step">下一步</string>
    <string name="submit_feedback">提交我的意见</string>
    <string name="submit">提交</string>
    <string name="login_by_phone_tips">如果您已经设置了登录密码，可使用密码登录，无需验证手机</string>
    <string name="login_by_password_tips">如果您没有设置了登录密码，可通过手机短信验证登录</string>
    <string name="register_tips">立即注册即可开启健康体验</string>
    <string name="reset_tips">请输入手机号码进行验证</string>
    <string name="phone_null_tips">请输入手机号码</string>
    <string name="phone_error_tips">请输入正确的手机号码</string>
    <string name="code_format_error_tips">请输入4位数字短信验证码</string>
    <string name="password_format_error_tips">请输入6～18位数字或字母组成的密码</string>
    <string name="phone_number">手机号</string>
    <string name="password">密&#160;&#160;&#160;&#8201;码</string>
    <string name="validate_code">验证码</string>
    <string name="hint_phone_number">请填写手机号码</string>
    <string name="hint_validate_code">请输入短信验证码</string>
    <string name="hint_password">请输入登录密码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_get_code_after">%1$ss</string>
    <string name="login_phone_code_null_tips">手机号码或验证码不能为空</string>
    <string name="login_phone_password_null_tips">手机号码或密码不能为空</string>
    <string name="network_io_error">网络连接失败，请检查网络是否正常</string>

    <string name="login_password">登录密码</string>
    <string name="confirm_login_password">确认密码</string>
    <string name="hint_login_password">请输入登录密码</string>
    <string name="hint_confirm_login_password">请再次输入登录密码</string>
    <string name="hint_set_login_password">为了您的账户安全，密码请不要少于6位</string>
    <string name="confirm_login_password_error">两次密码输入不一致，请重新输入</string>

    <string name="system_settings">系统设置</string>
    <string name="instruction">使用说明</string>
    <string name="text_moments">动态</string>
    <string name="logout">退出登录</string>

    <string name="edit_personal_info">编辑资料</string>
    <string name="save">保存</string>
    <string name="publish_fat_case">发布动态</string>
    <string name="text_publish">发布</string>

    <string name="my_display">我的头像</string>
    <string name="display">头像</string>
    <string name="sex">性别</string>
    <string name="nick_name">昵称</string>
    <string name="height">身高</string>
    <string name="birth">生日</string>
    <string name="provice">省份</string>
    <string name="city">城市</string>
    <string name="block">地区</string>
    <string name="personal_main_bg">个人主页背景</string>
    <string name="text_birth_day">出生日期</string>

    <string name="photo_chooser_from_camera">拍照</string>
    <string name="photo_chooser_from_galary">从相册选择</string>
    <string name="download_image_to_galary">保存图片至相册</string>
    <string name="cancel">取消</string>
    <string name="confirmed">确认</string>
    <string name="wait">敬请期待！</string>

    <string name="set_password_verify">设置密码验证</string>
    <string name="set_password">设置密码</string>

    <string name="text_validate_code_login">短信验证码登录</string>
    <string name="text_password_login">密码登录</string>
    <string name="text_input_phone_pw">请输入手机号码和密码登录</string>
    <string name="text_input_phone_code">请输入手机号码和验证码登录</string>
    <string name="text_input_phone_code_">请输入手机号码和验证码</string>
    <string name="text_register">立即注册</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_input_phone">请输入手机号码</string>
    <string name="text_input_code">输入验证码</string>
    <string name="text_had_passport">已有账号？</string>
    <string name="text_code_send_success">验证码发送成功</string>
    <string name="text_input_new_password">输入新密码，不小于6位</string>
    <string name="text_confirmed_new_password">确认密码</string>
    <string name="text_password_set_success">密码设置成功</string>

    <string name="text_set_avt">设置头像</string>
    <string name="text_your_nickname">您的昵称</string>
    <string name="text_your_birth">您的出生日期</string>
    <string name="text_your_height">您的身高</string>
    <string name="text_hint_name">请输入1-12个字符，支持中英文、数字</string>
    <string name="text_down">完成</string>
    <string name="text_set_password">设置密码</string>
    <string name="text_input_password">请输入密码</string>
    <string name="text_reset_password">重置密码</string>
    <string name="text_input_new_password1">请输入新密码</string>
    <string name="text_forget_password_">忘记密码</string>
    <string name="text_forget_password_tip">请通过手机短信验证</string>
    <string name="text_logout">退出登录</string>
    <string name="error_tips">发生错误！</string>

    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="find">发现</string>
    <string name="shopping_cart">购物车</string>

</resources>
