<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/ff000000"
        android:textSize="30sp"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_80"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_input_phone_pw"
        android:textColor="@color/ff000000"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_15"/>
    <TextView
        android:id="@+id/tv_error_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_15"
        android:text="sdfsdf"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/ffe26561"
        android:visibility="invisible"/>

    <com.aolan.b365.widget.OnekeyEditTextView
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:lines="1"
        android:textColorHint="@color/ff9a979b"
        android:textSize="17sp"
        app:drawableLeft="@mipmap/ic_user"
        app:drawableLine="@drawable/shape_line_height_1dp"
        app:hint="@string/text_input_phone"
        app:inputType="phone"
        app:maxLength="11"
        app:showPasswordMark="false" />

    <com.aolan.b365.widget.OnekeyEditTextView
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:lines="1"
        android:textColorHint="@color/ff9a979b"
        android:textSize="17sp"
        app:drawableLeft="@mipmap/ic_pw"
        app:drawableLine="@drawable/shape_line_height_1dp"
        app:hint="@string/hint_password"
        app:inputType="textPassword"
        app:maxLength="16"
        app:showPasswordMark="true" />



    <Button
        android:id="@+id/btn_login_by_pd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/btn_shape_new"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="57dp"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:textSize="@dimen/sp_15"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_25">
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:text="@string/text_register"
            android:textColor="@color/ff2ededc"/>
        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:text="@string/text_forget_password"
            android:textColor="@color/ff999999"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>
